--- a/browser extension/html/popup.html
+++ b/browser extension/html/popup.html
@@ -11,7 +11,10 @@
 	<div class="jumbotron">
 		<h1 class="display-4"><img src="../images/konnex_icon_original.jpg" style="width: 15vw;"> Konnex</h1>
 		<p class="lead">Konnex is an innovative solution or application that integrates the end to end user experience and application support into one single place, which is accessible as an onscreen floating widget on top of any application/webpage, with one single click and looks simple + user friendly, that connects the users with the IT product teams</p>
-		</p>
+		<!-- <hr>
+		<button class="button button1" id="disableButton" style="display:none">Error</button>
+		<br id="br1" style="display:none">
+		<br id="br2" style="display:none"> -->
 	</div>
 </body>
 </html>
